dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=litenetd.1
endif

if ENABLE_QT
  dist_man1_MANS+=litenet-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=litenet-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=litenet-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=litenet-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=litenet-wallet.1
endif
endif
